[package]
name = "ivm"
version = "0.1.0"
authors = ["karim elmougi <karim.elmougi@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "^1.0.32"
num_enum = "^0.5.1"
num-traits = "^0.2.12"
byteorder = "^1.3.4"
static_assertions = "^1.1.0"
parse_int = "^0.4.0"
clap = "^2.33.3"
pest = "^2.1.3"
pest_derive = "^2.1.0"
